# Drawio-Generator

./: README.md  app.py  architecture_diagram.json_based.drawio  pyproject.toml
asset/Products & Services/Generic (for use with generic icon)/: GenericProductCard.ai
data/: data.json
src/: config.py
src/control/: DiagramBuilder.py  XMLGenerator.py
src/model/: DiagramElement.py  StyleManager.py
